added catalogs and properties for liquibase migrations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,21 @@
 spring.application.name=cloudStorage
+spring.mvc.servlet.path=/api
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/cloud_storage
 spring.datasource.password=postgres
-spring.datasource.name=postgres
+spring.datasource.username=postgres
 
+#??? ???? ????? ???????? ???????? ? orm ????? ?? ?????? ?? ????? ??
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.hbm2ddl.auto=validate
+spring.jpa.properties.jakarta.persistence.schema-generation.database.action=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.defer-datasource-initialization=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=false
+
+spring.liquibase.enabled=false
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
+spring.liquibase.default-schema=public
+spring.liquibase.liquibase-schema=public
